# crewai-playground

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_test.yml
src/: app.py
tests/: test_app.py
